--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -18,6 +18,7 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         <script src="@routes.Assets.versioned("javascripts/jquery-3.1.0.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/mist.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/ds3.js")" type="text/javascript"></script>
         <script type="text/javascript" src="@routes.HomeController.javascriptRoutes"></script>
     </head>
     <body>
@@ -26,7 +27,7 @@
         	<button type="submit" id="search">Search</button>        	
        	</form>
        	
-       	<div id="results">
-       	</div>
+       	<svg id="visualization" width="960" height="880">
+       	</svg>
     </body>
 </html>
