--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -18,16 +18,25 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         <script src="@routes.Assets.versioned("javascripts/jquery-3.1.0.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/mist.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.versioned("javascripts/ds3.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/attractive.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/d3.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/d3-scale-chromatic.js")" type="text/javascript"></script>
         <script type="text/javascript" src="@routes.HomeController.javascriptRoutes"></script>
     </head>
     <body>
         <form id="searchForm">
         	<input type="text" name="term" id="term"/>
-        	<button type="submit" id="search">Search</button>        	
+        	<button type="submit" id="search">Search</button>
+        	<select id="shape-selector">
+	       		<option value="circle">Circle</option>
+	       		<option value="rect">Square</option>
+	       		<option value="ellipse">Ellipse</option>
+       	</select>        	
        	</form>
        	
-       	<svg id="visualization" width="960" height="880">
+       	
+       	<svg id="visualization" width="960" height="500">
+       	
        	</svg>
     </body>
 </html>
